--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,13 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "bit": "cpp"
+        "bit": "cpp",
+        "strstream": "cpp",
+        "list": "cpp",
+        "unordered_set": "cpp",
+        "set": "cpp",
+        "cfenv": "cpp",
+        "typeindex": "cpp",
+        "variant": "cpp"
     }
 }
